--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <body oncontextmenu="return false">
     <nav class="navbar container-fluid site-gradient text-center" id="nav">
-        <a class="navbar-brand mx-auto" href="/"><img alt="Brand" src="images/navicon.png" ><a style="outline:none;" id="header-links" href="/"></a></a>
+        <a class="navbar-brand mx-auto" ><img alt="Brand" src="images/navicon.png" ><a style="outline:none;" id="header-links"></a></a>
     </nav>
 
     <div class="container text-center" id="main">
